--- a/medial-queries2/main.css
+++ b/medial-queries2/main.css
@@ -1,6 +1,61 @@
 body {
   background: papayawhip;
 }
-.container{
-  background-color: magenta;
+* {
+  border: 1px solid teal;
+  box-sizing: border-box;
 }
+.container {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.wrapper{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  flex-grow: 3;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 70vh;
+}
+header,footer, aside, .wrapper {
+  flex-grow : 1;
+  margin: -5em;
+  min-height: 10vh;
+}
+aside  {
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  min-height: 20vh;
+
+}
+
+aside > div {
+  flex-grow: 10;
+  margin: .5em;
+  /* min-width: 20vh; */
+}
+
+main {
+  width: 90%;
+  flex-grow: 3;
+  margin: .5em;
+}
+@media (min-width: 600px) {
+  .container {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  header {
+    width: 100%;
+    max-height: 10vh;
+  }
+  .wrapper {
+    justify-content: stretch;
+    flex-basis: 70%;
+      min-height:  80vh;
+  }
+
